# admin-cta

./: .gitignore
cta-backend/: .env.sample  .gitignore  Cargo.toml  bacon.toml
cta-backend/.cargo/: config.toml
cta-backend/apps/: index.html
cta-backend/crates/libs/lib-auth/src/pass/: error.rs
cta-backend/crates/libs/lib-auth/src/pass/scheme/: error.rs
cta-backend/crates/libs/lib-core/: Cargo.toml
cta-backend/crates/libs/lib-core/src/ctx/: error.rs  mod.rs
cta-backend/crates/libs/lib-core/src/model/: error.rs  location.rs  mod.rs
cta-backend/crates/libs/lib-core/src/model/admin/: mod.rs
cta-backend/crates/libs/lib-core/src/model/base/: crud_fns.rs  mod.rs  utils.rs
cta-backend/crates/libs/lib-core/src/model/package/: mod.rs  package_crud.rs
cta-backend/crates/libs/lib-core/src/model/package/package_crud/: create.rs  get.rs
cta-backend/crates/libs/lib-core/src/model/package/types/: location.rs  mod.rs
cta-backend/crates/libs/lib-core/src/model/store/: mod.rs
cta-backend/crates/libs/lib-core/src/model/store/dbx/: error.rs
cta-backend/crates/libs/lib-email/: Cargo.toml
cta-backend/crates/libs/lib-email/src/: lib.rs  worker.rs
cta-backend/crates/libs/lib-email/src/template/: mod.rs
cta-backend/crates/libs/lib-rpc-core/: Cargo.toml
cta-backend/crates/libs/lib-rpc-core/src/: error.rs  rpc_params.rs
cta-backend/crates/libs/lib-rpc-core/src/utils/: macro_utils.rs
cta-backend/crates/libs/lib-utils/src/: time.rs
cta-backend/crates/libs/lib-web/: Cargo.toml
cta-backend/crates/libs/lib-web/src/: error.rs  lib.rs
cta-backend/crates/libs/lib-web/src/handlers/: handlers_location.rs  handlers_login.rs  handlers_package.rs  handlers_rpc.rs  mod.rs
cta-backend/crates/libs/lib-web/src/log/: mod.rs
cta-backend/crates/libs/lib-web/src/middleware/: mw_auth.rs  mw_res_map.rs
cta-backend/crates/libs/lib-web/src/utils/: token.rs
cta-backend/crates/services/web-server/: Cargo.toml
cta-backend/crates/services/web-server/examples/: quick_dev.rs
cta-backend/crates/services/web-server/src/: main.rs
cta-backend/crates/services/web-server/src/web/: mod.rs  routes_admin.rs  routes_location.rs  routes_package.rs  routes_rpc.rs
cta-backend/crates/services/web-server/src/web/rpcs/: location_rpc.rs  mod.rs
cta-backend/migrations/: 20241105070213_tables_down.sql  20241105070219_tables_schema_001.sql  20241105070220_tables_schema_002.sql  20241105070221_tables_schema_003.sql  20241105070224_tables_seeding_001.sql
cta-backend/tests/: quick_dev.rs
cta-website/: .env  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json
cta-website/.cargo/: config.toml
cta-website/public/: styles.scss  tailwind.css
cta-website/src/: config.rs  context_provider.rs  error.rs  home_routes.rs  lib.rs  main.rs
cta-website/src-tauri/: tauri.conf.json
cta-website/src-tauri/icons/: icon.icns
cta-website/src/components/: counter_btn.rs  loading.rs  mod.rs  navbar.rs  sidebar.rs  themes.rs
cta-website/src/components/toaster/: mod.rs  toaster.rs
cta-website/src/components/toaster/toast/: builder.rs  data.rs  mod.rs
cta-website/src/layouts/: main_layout.rs
cta-website/src/pages/: login.rs  mod.rs  not_found.rs
cta-website/src/pages/home/: mod.rs
cta-website/src/pages/home/panes/: mod.rs  pane_1.rs  pane_2.rs  pane_3.rs  pane_4.rs
cta-website/src/pages/locations/: create.rs  list.rs  mod.rs
cta-website/src/server/: auth.rs  location.rs  mod.rs
cta-website/src/types/: mod.rs  request_types.rs  theme.rs
cta-website/src/types/location/: mod.rs
cta-website/src/utils/: api.rs  mod.rs  time.rs
