[workspace]
resolver = "2"
members = [
  # --- Application Libraries
  "crates/libs/lib-auth",
  "crates/libs/lib-core",
  "crates/libs/lib-email",
  "crates/libs/lib-query",
  "crates/libs/lib-utils",
  "crates/libs/lib-web",
  # -- Application service
  "crates/services/web-server",
  # --- Application Tools
  "crates/tools/gen-key",
]
exclude = [
  "app-folder/cta-car-rentals",
  "app-folder/cta-desktop-tauri",
  "app-folder/cta-leptos-v2",
  "app-folder/cta-mobile-tauri",
]

[workspace.dependencies]
derive_more = { version = "1", features = ["display", "from"] }
modql = { version = "0.4.0", features = ["with-sea-query"] }
# -- JSON-rpc
rpc-router = { version = "=0.1.3" }
sea-query = "0.32"
sea-query-binder = { version = "0.7.0", features = [
  "sqlx-postgres",
  "with-time",
  "with-uuid",
] }
# -- serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["time_0_3"] }
# -- data
sqlx = { version = "0.8", features = [
  "macros",
  "postgres",
  "runtime-tokio",
  "runtime-tokio-rustls",
  "uuid",
] }
thiserror = "2"
# -- others
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
# -- async
tokio = { version = "1", features = ["full"] }
tower-sessions = "0.14"
uuid = { version = "1", features = ["fast-rng", "v4", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For experimental dev.
